fix page breaks on print

--- a/frontend/src/styles/CardNursingHome.scss
+++ b/frontend/src/styles/CardNursingHome.scss
@@ -20,7 +20,9 @@
 
 	@media print {
 			flex-direction: row;
-			page-break-inside: avoid;
+			-webkit-column-break-inside: avoid;
+          	page-break-inside: avoid;
+            break-inside: avoid;
 	}
 }
 
